force-app/main/default/objects/Product_Option__c/Product_Option__c.object-meta.xml
<CustomObject>
    <description>Bundle-to-option relationship. Equivalent of SBQQ__ProductOption__c.</description>
    <label>Product Option</label>
    <nameField>
        <label>Option Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>