force-app/main/default/objects/Product_Option__c/fields/Bundle_Product__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Bundle Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Bundle Options</relationshipLabel>
    <relationshipName>QF_Bundle_Options</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>