force-app/main/default/objects/Product_Option__c/fields/Default_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Default_Quantity__c</fullName>
    <label>Default Quantity</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>