force-app/main/default/objects/Product_Option__c/fields/Max_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Max_Quantity__c</fullName>
    <label>Max Quantity</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>