force-app/main/default/objects/Product_Option__c/fields/Option_Product__c.field-meta.xml
<CustomField>
    <fullName>Option_Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Option Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Option Usages</relationshipLabel>
    <relationshipName>QF_Option_Usages</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>