force-app/main/default/objects/Product_Option__c/fields/Price_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Price_Treatment__c</fullName>
    <inlineHelpText>Included options are priced at zero within the bundle.</inlineHelpText>
    <label>Price Treatment</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Additive</fullName>
                <default>true</default>
                <label>Additive</label>
            </value>
            <value>
                <fullName>Included</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>